--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="sas-container">
         <!-- header -->
-        <header class="grid-header">
+        <header class="sas-header">
             <h1 class="h1dif">CatsWebsite</h1>
             <img class="gif" src="./assets/gif/gato.gif" alt="gif de dos gatitos">
         </header>
@@ -61,7 +61,7 @@
         </nav>
     
         <!-- section -->
-        <div class="grid-section">
+        <div class="sas-section">
             <section>
                 <h2 class="h2dif">¿Que son los gatos?</h2>
                 <article class="transform">
@@ -114,7 +114,7 @@
             </section>
         </div>
         <!-- aside -->
-        <aside class="aside">
+        <aside class="sas-aside">
             <p>Informacion que quizas no sabias sobre nuestro pequeño amigo felino</p>
         </aside>
         <!-- footer -->
