--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -24,8 +24,8 @@
     <div class="sas-container">
         <!-- header -->
         <header class="sas-header">
-            <h1 class="h1dif">CatsWebsite</h1>
-            <img class="gif" src="./assets/gif/gato.gif" alt="gif de dos gatitos">
+            <h1 >CatsWebsite</h1>
+            <img src="./assets/gif/gato.gif" alt="gif de dos gatitos">
         </header>
         <!-- nav -->
         <nav class="navbar navbar-expand-lg navbar-light grid-nav navmod1 ">
