--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcup icon" href="./assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
             <img src="./assets/gif/gato.gif" alt="gif de dos gatitos">
         </header>
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-light grid-nav navmod1 ">
+        <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./Pages/Tienda.html">CatsWorld</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,22 +37,22 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" href="./Pages/Tienda.html">Tienda</a>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" href="./Pages/Contacto.html">Contacto</a>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" href="./Pages/Ubicacion.html">Ubicacion</a>
                         </li>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" href="./Pages/galeria.html">Galeria</a>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" href="index.html#foot">Footer</a>
                         </li>
                     </ul>
@@ -63,9 +63,9 @@
         <!-- section -->
         <div class="sas-section">
             <section>
-                <h2 class="h2dif">¿Que son los gatos?</h2>
-                <article class="transform">
-                    <p class="simple">Gato, procedente del vocablo latino cattus, es un término que alude a un animal
+                <h2 >¿Que son los gatos?</h2>
+                <article >
+                    <p>Gato, procedente del vocablo latino cattus, es un término que alude a un animal
                         mamífero que
                         forma parte
                         del conjunto de los félidos: aquellas especies carnívoras que presentan patas posteriores con
@@ -74,36 +74,36 @@
                         redondeada.
                     </p>
                 </article>
-                <h2 class="h2dif">¿Cuantas razas existen?</h2>
-                <article class="transform">
-                    <p class="simple">La Asociación Internacional de Gatos (TICA) estima que hay 71 razas
+                <h2>¿Cuantas razas existen?</h2>
+                <article>
+                    <p>La Asociación Internacional de Gatos (TICA) estima que hay 71 razas
                         estandarizadas. La Cat
                         Fanciers'
                         Association (FCA) coloca este número en 44. Un total de 43 razas son reconocidas por la
                         Fédération
                         Internationale Féline (FIFe).</p>
                 </article>
-                <h2 class="h2dif">¿Por que un gato ronronea?</h2>
-                <article class="bufa">
-                    <p class="font">Generalmente, el ronroneo de un gato se asocia a la felicidad del felino. En muchos
+                <h2>¿Por que un gato ronronea?</h2>
+                <article>
+                    <p>Generalmente, el ronroneo de un gato se asocia a la felicidad del felino. En muchos
                         casos será así pero
                         no hay una respuesta definitiva sobre ello: nerviosismo, estrés, miedo, ansia, felicidad,
                         emoción,
                         percepción de peligro. Lo hacen incluso cuando entran en sus últimos momentos de vida.</p>
                     <audio src="./assets/audio/ronrroneo.mp3" controls></audio>
                 </article>
-                <h2 class="h2dif">¿Por que un gato bufa y gruñe?</h2>
-                <article class="bufa">
-                    <p class="font">Los gatos bufan y gruñen cuando se sienten perturbados, amenazados o fuera de
+                <h2>¿Por que un gato bufa y gruñe?</h2>
+                <article>
+                    <p >Los gatos bufan y gruñen cuando se sienten perturbados, amenazados o fuera de
                         control. No viene de la
                         nada y sólo hacen esto, cuando sienten la presencia de algún problema. Pueden incluso y aunque
                         tu no
                         representes una amenaza real, bufarte y gruñirte.</p>
                     <audio src="./assets/audio/Bufa.mp3" controls></audio>
                 </article>
-                <h2 class="h2dif">¿De que depende el color de los gatos?</h2>
-                <article class="bufa">
-                    <p class="font">En el caso de los gatitos cada célula está formada por 38 cromosomas, 19 del padre y
+                <h2>¿De que depende el color de los gatos?</h2>
+                <article>
+                    <p>En el caso de los gatitos cada célula está formada por 38 cromosomas, 19 del padre y
                         19 de la madre. Y
                         por cada célula el padre aporta un gen y la madre otro. Esos genes pueden ser dominantes (que
                         son los
@@ -118,7 +118,7 @@
             <p>Informacion que quizas no sabias sobre nuestro pequeño amigo felino</p>
         </aside>
         <!-- footer -->
-        <footer id="foot">
+        <footer id="footsas">
             <h3>&copy;Nahuel Mateo Bordon | Website</h3>
             <a href="./Pages/Tienda.html"><i class="fa-solid fa-cat"></i></a>
         </footer>
