--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -63,7 +63,7 @@
         <!-- section -->
         <div class="sas-section">
             <section>
-                <h2 >¿Que son los gatos?</h2>
+                <h2 >¿Que son los gatos?.</h2>
                 <article >
                     <p>Gato, procedente del vocablo latino cattus, es un término que alude a un animal
                         mamífero que
