--- a/CatWeb-Bordon/pages/contacto.html
+++ b/CatWeb-Bordon/pages/contacto.html
@@ -89,6 +89,7 @@
         </article>
     </section>
     <!-- form -->
+    <form action="">
     <div class="mb-2">
         <label for="exampleFormControlInput1" class="form-label">Tu correo electronico</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Recuerda poner @gmail.com">
@@ -99,8 +100,10 @@
             placeholder="Esperamos tu mensaje!"></textarea>
     </div>
     <!-- Buttom -->
-    <button type="button" class="btn btn-lg btnmod1" enable>Borrar</button>
-    <button type="button" class="btn btn-lg btnmod2" enable>Enviar</button>
+
+    <button type="reset" class="btn btn-lg btnmod1" enable>Borrar</button>
+    <button type="submit" class="btn btn-lg btnmod2" enable>Enviar</button>
+</form>
     <!-- aside -->
    
     <!-- footer -->
