--- a/CatWeb-Bordon/pages/galeria.html
+++ b/CatWeb-Bordon/pages/galeria.html
@@ -36,13 +36,13 @@
                     <li class="nav-item nav1">
                         <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                     <li class="nav-item nav1">
-                        <a class="nav-link" href="Tienda.html">Tienda</a>
+                        <a class="nav-link" href="tienda.html">Tienda</a>
                     </li>
                     <li class="nav-item nav1">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item nav1">
-                        <a class="nav-link" href="Ubicacion.html">Ubicacion</a>
+                        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                     </li>
                     </li>
                     <li class="nav-item nav1">
