--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -40,17 +40,17 @@
                         <li class="nav-item ">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         <li class="nav-item ">
-                            <a class="nav-link" href="./Pages/Tienda.html">Tienda</a>
+                            <a class="nav-link" href="./pages/tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="./Pages/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="./Pages/Ubicacion.html">Ubicacion</a>
+                            <a class="nav-link" href="./pages/ubicacion.html">Ubicacion</a>
                         </li>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="./Pages/galeria.html">Galeria</a>
+                            <a class="nav-link" href="./pages/galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="index.html#foot">Footer</a>
