--- a/CatWeb-Bordon/pages/tienda.html
+++ b/CatWeb-Bordon/pages/tienda.html
@@ -40,20 +40,20 @@
                         <li class="nav-item nav1">
                             <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         <li class="nav-item nav1">
-                            <a class="nav-link" href="Tienda.html">Tienda</a>
+                            <a class="nav-link" href="tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item nav1">
-                            <a class="nav-link" href="Contacto.html">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item nav1">
-                            <a class="nav-link" href="Ubicacion.html">Ubicacion</a>
+                            <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                         </li>
                         </li>
                         <li class="nav-item nav1">
                             <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item nav1">
-                            <a class="nav-link" href="Tienda.html#foot">Footer</a>
+                            <a class="nav-link" href="tienda.html#foot">Footer</a>
                         </li>
                     </ul>
                 </div>
