--- a/CatWeb-Bordon/pages/contacto.html
+++ b/CatWeb-Bordon/pages/contacto.html
@@ -9,7 +9,7 @@
     <link rel="shortcup icon" href="../assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/stylee.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,12 +21,12 @@
 
 <body>
     <!-- header -->
-    <header>
+    <header class="sas-header">
         <h1>Contacto</h1>
         <img class="gif" src="../assets/gif/gato.gif" alt="gif de dos gatitos">
     </header>
     <!-- nav -->
-    <nav class="navbar navbar-expand-lg navbar-light grid-nav navmod1 ">
+    <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
         <div class="container-fluid">
             <a class="navbar-brand" href="Tienda.html">CatsWorld</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -58,9 +58,10 @@
         </div>
     </nav>
     <!-- section -->
-    <section class="grid-section">
+    <section class="sas-section">
+        <h2>Puedes contactarnos mediante:</h2>
         <article class="contact-trans">
-            <h2>Puedes contactarnos mediante:</h2>
+
             <ul class="contact">
                 <li>Instagram</li>
                 <ul>
@@ -76,9 +77,10 @@
                 </ul>
             </ul>
         </article>
+        <h2>¿Como lo hago?</h2>
+        <h3>Facil!</h3>
         <article class="contact-trans">
-            <h2>¿Como lo hago?</h2>
-            <h3>Facil!</h3>
+
             <ol class="contact">
                 <li>Elije un medio de los 3 por el cual contactarnos</li>
                 <li>Descargate la app correspondiente</li>
@@ -90,24 +92,25 @@
     </section>
     <!-- form -->
     <form action="">
-    <div class="mb-2">
-        <label for="exampleFormControlInput1" class="form-label">Tu correo electronico</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Recuerda poner @gmail.com">
-    </div>
-    <div class="mb-2">
-        <label for="exampleFormControlTextarea1" class="form-label">Tu mensaje</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-            placeholder="Esperamos tu mensaje!"></textarea>
-    </div>
-    <!-- Buttom -->
+        <div class="mb-2">
+            <label for="exampleFormControlInput1" class="form-label">Tu correo electronico</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1"
+                placeholder="Recuerda poner @gmail.com">
+        </div>
+        <div class="mb-2">
+            <label for="exampleFormControlTextarea1" class="form-label">Tu mensaje</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                placeholder="Esperamos tu mensaje!"></textarea>
+        </div>
+        <!-- Buttom -->
 
-    <button type="reset" class="btn btn-lg btnmod1" enable>Borrar</button>
-    <button type="submit" class="btn btn-lg btnmod2" enable>Enviar</button>
-</form>
+        <button type="reset" class="btn btn-lg btnmod1" enable>Borrar</button>
+        <button type="submit" class="btn btn-lg btnmod2" enable>Enviar</button>
+    </form>
     <!-- aside -->
-   
+
     <!-- footer -->
-    <footer id="foot">
+    <footer id="footsas">
         <h3>&copy;Nahuel Mateo Bordon | Website</h3>
     </footer>
     <a href="../Pages/Tienda.html"><i class="fa-solid fa-cat"></i></a>
