--- a/CatWeb-Bordon/pages/tienda.html
+++ b/CatWeb-Bordon/pages/tienda.html
@@ -9,7 +9,7 @@
     <link rel="shortcup icon" href="../assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/stylee.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
@@ -21,14 +21,14 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="sas-container">
         <!-- header -->
-        <header>
+        <header class="sas-header">
             <h1>Tienda</h1>
             <img class="gif" src="../assets/gif/gato.gif" alt="gif de dos gatitos">
         </header>
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-light grid-nav navmod1 ">
+        <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="Tienda.html">CatsWorld</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,33 +37,35 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item nav1">
+                        <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                        <li class="nav-item nav1">
+                        <li class="nav-item">
                             <a class="nav-link" href="tienda.html">Tienda</a>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item">
                             <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                         </li>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item ">
                             <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
-                        <li class="nav-item nav1">
+                        <li class="nav-item">
                             <a class="nav-link" href="tienda.html#foot">Footer</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
         <!-- section -->
-        <section class="grid-section">
+        <section class="sas-section">
+            <h2>Nuestra tienda oficial</h2>
+            <h3>Siempre al mejor precio!</h3>
             <article>
-                <h2>Nuestra tienda oficial</h2>
-                <h3>Siempre al mejor precio!</h3>
+
                 <table class="transform">
                     <tr>
                         <th>Producto</th>
@@ -141,11 +143,11 @@
             </article>
         </section>
         <!-- aside -->
-        <aside class="aside">
+        <aside class="sas-aside">
             <p>Nuesta Tienda a los mejores precios!</p>
         </aside>
         <!-- footer -->
-        <footer id="foot">
+        <footer id="footsas">
             <h3>&copy;Nahuel Mateo Bordon | Website</h3>
         </footer>
         <a href="../Pages/Tienda.html"><i class="fa-solid fa-cat"></i></a>
