--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -25,7 +25,7 @@
         <!-- header -->
         <header class="sas-header">
             <h1 >CatsWebsite</h1>
-            <img src="./assets/gif/gato.gif" alt="gif de dos gatitos">
+            <img class="gif" src="./assets/gif/gato.gif" alt="gif de dos gatitos">
         </header>
         <!-- nav -->
         <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
