--- a/CatWeb-Bordon/pages/galeria.html
+++ b/CatWeb-Bordon/pages/galeria.html
@@ -7,7 +7,7 @@
         <title>Location</title>
         <link rel="shortcup icon" href="../assets/img/favicon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../scss/stylee.css">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,14 @@
     <script src="https://kit.fontawesome.com/c7476c2252.js" crossorigin="anonymous"></script>
     </head>
 <body>
-    <div class="grid-container">
+    <div class="sas-container">
     <!-- header -->
-    <header class="grid-header">
+    <header class="sas-header">
         <h1>Galeria</h1>
         <img class="gif" src="../assets/gif/gato.gif" alt="gif de dos gatitos">
     </header>
     <!-- nav -->
-    <nav class="navbar navbar-expand-lg navbar-light grid-nav navmod1 ">
+    <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
         <div class="container-fluid">
             <a class="navbar-brand" href="Tienda.html">CatsWorld</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -57,7 +57,7 @@
     </nav>
         <!-- section -->
 
-        <section class="grid-section">
+        <section class="galeria-section">
             <div id="carouselExampleIndicators" class="carousel slide col-12" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -93,11 +93,11 @@
             </article>
         </section>
         <!-- aside -->
-        <aside class="aside">
+        <aside class="sas-aside">
             <p>Aqui encontraras una galeria de las mascotas de  nuestros mejores clientes!, Si quieres que tu mascota aparezca tendras que comprar como minimo 3 veces y enviarnos un mensaje en nuestras redes.</p>
         </aside>
         <!-- footer -->
-        <footer id="foot">
+        <footer id="footsas">
             <h3>&copy;Nahuel Mateo Bordon | Website</h3>
         <a href="./Tienda.html"><i class="fa-solid fa-cat"></i></a>
         </footer>
