--- a/CatWeb-Bordon/pages/ubicacion.html
+++ b/CatWeb-Bordon/pages/ubicacion.html
@@ -9,7 +9,7 @@
     <link rel="shortcup icon" href="../assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/stylee.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,14 +20,14 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="sas-container">
      <!-- header -->
-    <header>
+    <header class="sas-header">
         <h1 >¿Donde encontrarnos?.</h1>
         <img class="gif" src="../assets/gif/gato.gif" alt="gif de dos gatitos">
     </header>
     <!-- nav -->
-    <nav class="navbar navbar-expand-lg navbar-light grid-nav navmod1 ">
+    <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
         <div class="container-fluid">
             <a class="navbar-brand" href="Tienda.html">CatsWorld</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -59,7 +59,7 @@
         </div>
     </nav>
     <!-- section -->
-    <section class="grid-section">
+    <section class="sas-section">
         <article>
             <h2>Te dejamos la direccion acontinuacion.</h2>
             <h3>Te esperamos!</h3>
@@ -86,11 +86,11 @@
         </article>
     </section>
     <!-- aside -->
-    <aside class="aside">
+    <aside class="sas-aside">
         <p>Toda nuesta informacion de donde encontrarnos</p>
     </aside>
      <!-- footer -->
-    <footer id="foot">
+    <footer id="footsas">
         <h3>&copy;Nahuel Mateo Bordon | Website</h3>
     </footer>
     <a href="../Pages/Tienda.html"><i class="fa-solid fa-cat"></i></a>
