--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="./pages/galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="index.html#foot">Footer</a>
+                            <a class="nav-link" href="index.html#footsas">Footer</a>
                         </li>
                     </ul>
                 </div>
@@ -89,7 +89,7 @@
                         no hay una respuesta definitiva sobre ello: nerviosismo, estrés, miedo, ansia, felicidad,
                         emoción,
                         percepción de peligro. Lo hacen incluso cuando entran en sus últimos momentos de vida.</p>
-                    <audio src="./assets/audio/ronrroneo.mp3" controls></audio>
+                    <audio class="audio" src="./assets/audio/ronrroneo.mp3" controls></audio>
                 </article>
                 <h2>¿Por que un gato bufa y gruñe?</h2>
                 <article>
@@ -98,7 +98,7 @@
                         nada y sólo hacen esto, cuando sienten la presencia de algún problema. Pueden incluso y aunque
                         tu no
                         representes una amenaza real, bufarte y gruñirte.</p>
-                    <audio src="./assets/audio/Bufa.mp3" controls></audio>
+                    <audio class="audio" src="./assets/audio/Bufa.mp3" controls></audio>
                 </article>
                 <h2>¿De que depende el color de los gatos?</h2>
                 <article>
@@ -118,9 +118,10 @@
         </aside>
         <!-- footer -->
         <footer id="footsas">
-            <h3>&copy;Nahuel Mateo Bordon | Website</h3>
+            <h3>&copy;CatsWorld 2022 | Website | <a href="./pages/contacto.html">Contact</a></h3>
             <a href="./pages/tienda.html"><i class="fa-solid fa-cat"></i></a>
         </footer>
+        <!-- script -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
