--- a/CatWeb-Bordon/pages/contacto.html
+++ b/CatWeb-Bordon/pages/contacto.html
@@ -51,16 +51,16 @@
                         <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item nav1">
-                        <a class="nav-link" href="contacto.html#foot">Footer</a>
+                        <a class="nav-link" href="contacto.html#footsas">Footer</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- section -->
-    <section class="sas-section">
+    <section class="sas-section contmod2">
         <h2>Puedes contactarnos mediante:</h2>
-        <article class="contact-trans">
+        <article class="contact-trans contmod">
 
             <ul class="contact">
                 <li>Instagram</li>
@@ -82,19 +82,19 @@
         </article>
         <h2>¿Como lo hago?</h2>
         <h3>Facil!</h3>
-        <article class="contact-trans">
+        <article class="contact-trans contmod">
 
             <ol class="contact">
                 <li>Elije un medio de los 3 por el cual contactarnos</li>
                 <li>Descargate la app correspondiente</li>
                 <li>Buscanos con el nombre correspondiente</li>
                 <li>y hablanos!</li>
+                 <img src="../assets/gif/redes.gif" alt="gif de redes sociales">
             </ol>
-            <img src="../assets/gif/redes.gif" alt="gif de redes sociales" width="690px">
         </article>
     </section>
     <!-- form -->
-    <form action="">
+    <form class="form" action="">
         <div class="mb-2">
             <label for="exampleFormControlInput1" class="form-label">Tu correo electronico</label>
             <input type="email" class="form-control" id="exampleFormControlInput1"
@@ -114,9 +114,9 @@
 
     <!-- footer -->
     <footer id="footsas">
-        <h3>&copy;CatsWorld 2022 - support CatsWork@gmail.com</h3>
+        <h3>&copy;CatsWorld 2022 | Website | <a href="./contacto.html">Contact</a></h3>
+        <a href="tienda.html"><i class="fa-solid fa-cat"></i></a>
     </footer>
-    <a href="./tienda.htm"><i class="fa-solid fa-cat"></i></a>
     <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
