--- a/CatWeb-Bordon/pages/tienda.html
+++ b/CatWeb-Bordon/pages/tienda.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tienda.html#foot">Footer</a>
+                            <a class="nav-link" href="tienda.html#footsas">Footer</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
         <section class="sas-section">
             <h2>Nuestra tienda oficial</h2>
             <h3>Siempre al mejor precio!</h3>
-            <article>
+            <article class="tienda-gatos">
 
                 <table class="transform">
                     <tr>
@@ -104,7 +104,7 @@
                 </table>
                 <img src="../assets/gif/gato-pizza.gif" alt="gif de gato comiendo" width="230px">
             </article>
-            <article>
+            <article class="tienda-gatos">
                 <table class="transform">
                     <tr>
                         <th>Producto</th>
@@ -147,9 +147,10 @@
         </aside>
         <!-- footer -->
         <footer id="footsas">
-            <h3>&copy;Nahuel Mateo Bordon | Website</h3>
+            <h3>&copy;CatsWorld 2022 | Website | <a href="./contacto.html">Contact</a></h3>
+            <a href="tienda.html"><i class="fa-solid fa-cat"></i></a>
         </footer>
-        <a href="./tienda.htm"><i class="fa-solid fa-cat"></i></a>
+        <!-- script -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
