--- a/CatWeb-Bordon/index.html
+++ b/CatWeb-Bordon/index.html
@@ -29,7 +29,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./Pages/Tienda.html">CatsWorld</a>
+                <a class="navbar-brand" href="./pages/tienda.html">CatsWorld</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
