--- a/CatWeb-Bordon/pages/contacto.html
+++ b/CatWeb-Bordon/pages/contacto.html
@@ -28,7 +28,7 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-light sas-nav sasnavmod1 ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Tienda.html">CatsWorld</a>
+            <a class="navbar-brand" href="tienda.html">CatsWorld</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
