--- a/CatWeb-Bordon/pages/ubicacion.html
+++ b/CatWeb-Bordon/pages/ubicacion.html
@@ -87,7 +87,7 @@
         </section>
         <!-- aside -->
         <aside class="sas-aside">
-            <p>Toda nuesta informacion de donde encontrarnos</p>
+            <p>Toda nuesta informacion de donde encontrarnos.</p>
         </aside>
         <!-- footer -->
         <footer id="footsas">
